--- a/bionic/Vagrantfile
+++ b/bionic/Vagrantfile
@@ -7,6 +7,11 @@ SCRIPT
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/bionic64"
 
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory = 512
+    vb.cpus = 1
+  end
+
   config.vm.define "mysql-db" do |mysql|
  
     mysql.vm.network "public_network", ip: "192.168.0.43"
@@ -30,6 +35,13 @@ Vagrant.configure("2") do |config|
     phpweb.vm.network "forwarded_port", guest: 8888, host: 8888
     phpweb.vm.network "public_network", ip: "192.168.0.44"
 
+
+    phpweb.vm.provider "virtualbox" do |vb|
+      vb.memory = 512
+      vb.cpus = 1
+      vb.name = "ubuntu_bionic_php7"
+    end
+
     phpweb.vm.provision "shell", 
       inline: "apt-get update && sudo apt-get install -y puppet"
   
@@ -39,4 +51,24 @@ Vagrant.configure("2") do |config|
     end
   end
 
+  config.vm.define "memcached" do |memcached|
+    memcached.vm.box = "centos/7"
+    memcached.vm.provider "virtualbox" do |vb|
+        vb.memory = 512
+        vb.cpus = 1
+        vb.name = "centos7_memcached"
+    end
+
+  end
+
+  config.vm.define "dockerhost" do |dockerhost|
+    dockerhost.vm.provider "virtualbox" do |vb|
+        vb.memory = 512
+        vb.cpus = 1
+        vb.name = "ubuntu_dockerhost"
+    end
+
+    dockerhost.vm.provision "shell", 
+        inline: "apt-get update && apt-get install -y docker.io"
+  end
 end
